--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
    <header>
        <h1>To Hell We Must Sail!</h1>
    </header>
-   <div class="frame"></div>
-   <div class="ship">    <div class="icon-animation"></div></div>
+   <div class="all">
+          <div class="frame"></div>
+           <div class="ship">
+               <div class="icon-animation"></div>
+           </div>
+   </div>
+
+    <section class="description"><p>Animation Created using Spritesheet and Keyframes <br> <a href="https://github.com/smity81435/SpriteAnimate.git">Source Code</a><br>Designed and animation by Douglas Smith &copy; 2018</p></section>
 
 </body>
 </html>
